zope.testing Changelog
**********************

3.7.7 (unreleased)
==================

- Fix #251759: Test runner descended into directories that aren't Python
  packages.

- Code cleanups.


3.7.6 (2009-07-02)
==================

- Add zope-testrunner console_scripts entry point. This exposes a
  zope-testrunner binary with default installs allowing the testrunner to be
  run from the command line.

3.7.5 (2009-06-08)
==================

- Fix bug when running subprocesses on Windows.

- The option REPORT_ONLY_FIRST_FAILURE (command line option "-1") is now
  respected even when a doctest declares its own REPORTING_FLAGS, such as
  REPORT_NDIFF.

- Fixed bug that broke readline with pdb when using doctest
  (see http://bugs.python.org/issue5727).

- Made tests pass on Windows and Linux at the same time.


3.7.4 (2009-05-01)
==================

- Filenames of doctest examples now contain the line number and not
  only the example number. So a stack trace in pdb tells the exact
  line number of the current example. This fixes
  https://bugs.launchpad.net/bugs/339813

- Colorization of doctest output correctly handles blank lines.


3.7.3 (2009-04-22)
==================

- Better deal with rogue threads by always exiting with status so even
  spinning daemon threads won't block the runner from exiting. This deprecated
  the ``--with-exit-status`` option.


3.7.2 (2009-04-13)
==================

- fix test failure on Python 2.4 because of slight difference in the way
  coverage is reported (__init__ files with only a single comment line are now
  not reported)
- fixed bug that caused the test runner to hang when running subprocesses (as a
  result Python 2.3 is no longer supported).
- there is apparently a bug in Python 2.6 (related to
  http://bugs.python.org/issue1303673) that causes the profile tests to fail.
- added explanitory notes to buildout.cfg about how to run the tests with
  multiple versions of Python


3.7.1 (2008-10-17)
==================
