@@ -28,6 +28,7 @@ affecting the Python path:
     <BLANKLINE>
     Module: sampletestsf
     <BLANKLINE>
+    Traceback (most recent call last):
     ImportError: No module named sampletestsf
     ...
 
@@ -454,6 +455,7 @@ Test Suites with None for suites or tests
     <BLANKLINE>
     Module: sample1.sampletests_none_suite
     <BLANKLINE>
+    Traceback (most recent call last):
     TypeError: Invalid test_suite, None, in sample1.sampletests_none_suite
     <BLANKLINE>
     <BLANKLINE>
@@ -472,6 +474,7 @@ Test Suites with None for suites or tests
     <BLANKLINE>
     Module: sample1.sampletests_none_test
     <BLANKLINE>
+    Traceback (most recent call last):
     TypeError: ...
     <BLANKLINE>
     <BLANKLINE>
