@@ -62,6 +62,7 @@ be read only):
         g()
       File "testrunner-ex/sample2/sampletests_e.py", line 24, in g
         x = y + 1
+       - __traceback_info__: I don't know what Y should be.
     NameError: global name 'y' is not defined
     <BLANKLINE>
     <BLANKLINE>
@@ -148,6 +149,7 @@ there'll be a summary of the errors at the end of the test:
         g()
       File "testrunner-ex/sample2/sampletests_e.py", line 24, in g
         x = y + 1
+       - __traceback_info__: I don't know what Y should be.
     NameError: global name 'y' is not defined
     <BLANKLINE>
     ...
@@ -240,6 +242,7 @@ Similarly for progress output, the progress ticker will be interrupted:
         g()
       File "testrunner-ex/sample2/sampletests_e.py", line 24, in g
         x = y + 1
+       - __traceback_info__: I don't know what Y should be.
     NameError: global name 'y' is not defined
     <BLANKLINE>
         5/56 (8.9%)##r##
@@ -707,6 +710,7 @@ Then run the tests:
     <BLANKLINE>
     Module: sample2.sampletests_i
     <BLANKLINE>
+    Traceback (most recent call last):
       File "testrunner-ex/sample2/sampletests_i.py", line 1
         importx unittest
                        ^
@@ -723,6 +727,7 @@ Then run the tests:
     <BLANKLINE>
     Module: sample2.sample22.sampletests_i
     <BLANKLINE>
+    Traceback (most recent call last):
     AttributeError: 'module' object has no attribute 'test_suite'
     <BLANKLINE>
     <BLANKLINE>
